hphp/hack/test/typecheck/invariant_args.php.like_types.exp
File "invariant_args.php", line 13, characters 3-13:
  ?C
File "invariant_args.php", line 15, characters 3-13:
  C
File "invariant_args.php", line 14, characters 22-33:
Invalid argument (Typing[4110])
File "printf.hhi", line 133, characters 30-56:
Expected ~HH\FormatString<~PlainSprintf> because it is an unenforceable type
File "invariant_args.php", line 14, characters 22-33:
But got string
